# drf_project

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
users/: models.py  urls.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py
vehicle/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car_alter_milage_moto.py  0005_car_owner_moto_owner.py  0006_car_amount.py  0007_alter_milage_options.py
